sketch out basic structure

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer>
-	<p>By <a href="mailto:yalinli2@illinois.edu">Yalin Li</p>
+	<p>
+		Email: <a href="mailto:zoe.yalin.li@gmail.com">Yalin Li</a>;
+		&nbsp;&nbsp;&nbsp;&nbsp; <!-- add some space -->
+		GitHub: <a href="http://github.com/yalinli2"> @yalinli2</a>
+	</p>
 </footer>
