--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,21 @@
+<header>
+	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
+</header>
+
 <aside>
 	<div class="container">
 		<nav>
 			<ul>
-{% for page in site.pages %} {% if page.title %}
-<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-{% endif %} {% endfor %}
-<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
-			</ul>
-			</li>
+				{% for page in site.pages %} {% if page.title %}
+				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+				{% endif %} {% endfor %}
+
+				<!-- If want additional folder (e.g., blog)
+				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
+							</ul>
+							</li>
+				-->
 			</ul>
 		</nav>
 	</div>
 </aside>
-
-<header>
-	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
-</header>
