--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
 }
+
 h1,
 h2,
 h3 {
@@ -14,6 +15,7 @@ h3 {
   font-family: $heading-font;
   line-height: 1.5;
 }
+
 h1 {
   color: $main;
   font-size: 2.5em;
@@ -23,9 +25,22 @@ h1 {
     color: $main;
   }
 }
+
 h2 {
   font-size: 2em;
 }
+
+header {
+  background: $header;
+  padding: 0px 0px;
+  text-align: center;
+  margin: 50px 0 0;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 a,
 a:visited {
   color: $link-color;
@@ -36,16 +51,7 @@ a:hover {
   color: $link-hover-color;
   text-decoration: underline;
 }
-header {
-  background: $header;
-  padding: 0px 15px;
-  text-align: center;
-  margin: 50px 0 0;
-  height: 25vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 main {
   padding: 0 15px;
   max-width: $content-width;
@@ -72,7 +78,7 @@ aside {
   box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
   nav {
     float: left;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     ul {
       margin: 0;
@@ -105,7 +111,9 @@ aside {
     }
   }
 }
+
 footer {
   text-align: center;
+  max-width: $content-width;
   padding: 40px;
 }
