--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,38 @@
 <footer>
 	<p>
-		Email: <a href="mailto:zoe.yalin.li@gmail.com">Yalin Li</a>;
-		&nbsp;&nbsp;&nbsp;&nbsp; <!-- add some space -->
-		GitHub: <a href="http://github.com/yalinli2"> @yalinli2</a>
+		Email: <a href="mailto:zoe.yalin.li@gmail.com">Yalin Li</a>
+		&nbsp&nbsp
+		CV: <a href="../files/CV_Yalin Li.pdf">August 2021</a>
+	</p>
+
+	<p>
+		<!-- Google Scholar -->
+		<img src='../images/logos/google-scholar.png', alt='Google Scholar',
+		style='float: center; width: 32px; vertical-align: middle'>
+		<a href="mailto:zoe.yalin.li@gmail.com">Google Scholar</a>
+		&nbsp&nbsp
+
+		<!-- ORCiD -->
+		<link rel="stylesheet" href="../css/academicons.min.css"/>
+		<i class="ai ai-orcid ai-2x", style='float: center; width: 32px; vertical-align: middle;'></i>
+		<a href="https://orcid.org/0000-0002-8863-4758">ORCiD</a>
+		&nbsp&nbsp
+
+		<!-- LinkedIn -->
+		<img src='../images/logos/linkedin.png', alt='LinkedIn',
+		style='float: center; width: 32px; vertical-align: middle'>
+		<a href="https://www.linkedin.com/in/yalin-li-a157017b/">LinkedIn</a>
+	</p>
+
+	<p>
+		<!-- GitHub -->
+		<img src='../images/logos/github.png', alt='GitHub',
+		style='float: center; width: 32px; vertical-align: middle'>
+		&nbsp
+		@<a href="http://github.com/yalinli2">yalinli2</a>
+		&nbsp
+		@<a href="http://github.com/QSD-Group">QSD Group</a>
+		&nbsp
+		@<a href="http://github.com/BioSTEAMDevelopmentGroup">BioSTEAM Development Group</a>
 	</p>
 </footer>
