--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -114,6 +114,8 @@ aside {
 
 footer {
   text-align: center;
+  line-height: 20px;
   max-width: $content-width;
   padding: 40px;
+  align-items: center;
 }
