Publication page done

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer>
 
-	<hr> <br>
+	<hr style='border-top: 4px double; color: gray'>
+	<br>
 
 	Email: <a href="mailto:zoe.yalin.li@gmail.com">Yalin Li</a>
 	&nbsp&nbsp
