fix multiple formatting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,9 +34,9 @@
 	&nbsp
 	@<a href="http://github.com/yalinli2">yalinli2</a>
 	&nbsp
-	@<a href="http://github.com/QSD-Group">QSD Group</a>
+	@<a href="http://github.com/QSD-Group">QSD-Group</a>
 	&nbsp
-	@<a href="http://github.com/BioSTEAMDevelopmentGroup">BioSTEAM Development Group</a>
+	@<a href="http://github.com/BioSTEAMDevelopmentGroup">BioSTEAMDevelopmentGroup</a>
 
 	<br><br>
 
