--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,10 +14,11 @@ h3 {
   color: $heading-font-color;
   font-family: $heading-font;
   line-height: 1.5;
+  font-size: 1.5em;
 }
 
 h1 {
-  color: $main;
+  color: $heading-font-color;
   font-size: 2.5em;
   a,
   a:visited {
@@ -34,8 +35,8 @@ header {
   background: $header;
   padding: 0px 0px;
   text-align: center;
-  margin: 50px 0 0;
-  height: 10vh;
+  margin: 80px 0 0;
+  height: 20vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,7 +66,7 @@ time {
   margin: 0 auto;
 }
 
-/* Aside */
+/* aside */
 
 aside {
   position: fixed;
@@ -97,7 +98,7 @@ aside {
           box-shadow: 0;
           &:hover,
           &:active {
-            background: $header;
+            background: $link-hover-color;
             text-decoration: none;
             color: $main;
           }
