--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,9 @@ img[src*='#TOC'] {
     width: 50%;
 }
 
+/* Cannot override the setting in `p` tag
 img + em {
   text-align: center;
   text-decoration: underline;
 }
+*/
