--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,19 @@
+<!-- header -->
+<head>
+<style>
+header {
+  background-image: url('../images/bg_index.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
+</head>
+
 <header>
-	<h1>Yalin Li</h1>
+<h1>
+Yalin Li
+</h1>
 </header>
 
 <aside>
