--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 
 	Email: <a href="mailto:zoe.yalin.li@gmail.com">Yalin Li</a>
 	&nbsp&nbsp
-	CV: <a href="../files/CV_Yalin Li.pdf">October 2021</a>
+	CV: <a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">October 2021</a>
 
 	<br><br>
 
