--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -5,7 +5,7 @@ layout: default
 <head>
 <style>
 header {
-  background-image: url('../images/bg_research.jpg');
+  background-image: url('https://github.com/yalinli2/webpage/blob/gh-pages/images/bg_research.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
