fix image links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,26 +10,26 @@
 	<br><br>
 
 	<!-- Google Scholar -->
-	<img src='https://github.com/yalinli2/webpage/blob/gh-pages/images/logos/google-scholar.png', alt='Google Scholar',
+	<img src='https://yalinli2.github.io/webpage/images/logos/google-scholar.png', alt='Google Scholar',
 	style='float: center; width: 32px; vertical-align: middle'>
 	<a href="https://scholar.google.com/citations?user=5Zv3mM0AAAAJ&hl=en">Google Scholar</a>
 	&nbsp&nbsp
 
 	<!-- ORCiD -->
-	<link rel="stylesheet" href="https://github.com/yalinli2/webpage/blob/gh-pages/css/academicons.min.css"/>
+	<link rel="stylesheet" href="https://yalinli2.github.io/webpage/css/academicons.min.css"/>
 	<i class="ai ai-orcid ai-2x", style='float: center; width: 32px; vertical-align: middle;'></i>
 	<a href="https://orcid.org/0000-0002-8863-4758">ORCiD</a>
 	&nbsp&nbsp
 
 	<!-- LinkedIn -->
-	<img src='https://github.com/yalinli2/webpage/blob/gh-pages/images/logos/linkedin.png', alt='LinkedIn',
+	<img src='https://yalinli2.github.io/webpage/images/logos/linkedin.png', alt='LinkedIn',
 	style='float: center; width: 32px; vertical-align: middle'>
 	<a href="https://www.linkedin.com/in/yalin-li-a157017b/">LinkedIn</a>
 
 	<br><br>
 
 	<!-- GitHub -->
-	<img src='https://github.com/yalinli2/webpage/blob/gh-pages/images/logos/github.png', alt='GitHub',
+	<img src='https://yalinli2.github.io/webpage/images/logos/github.png', alt='GitHub',
 	style='float: center; width: 32px; vertical-align: middle'>
 	&nbsp
 	@<a href="http://github.com/yalinli2">yalinli2</a>
