--- a/_layouts/presentations.html
+++ b/_layouts/presentations.html
@@ -5,7 +5,7 @@ layout: default
 <head>
 <style>
 header {
-  background-image: url('https://github.com/yalinli2/webpage/blob/gh-pages/images/bg_presentations.jpg');
+  background-image: url('https://yalinli2.github.io/webpage/images/bg_presentations.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
