--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	<hr style='border-top: 4px double; color: gray'>
 	<br>
 
-	Email: <a href="mailto:zoe.yalin.li@gmail.com">Yalin Li</a>
+	Email: <a href="mailto:mailto.yalin.li@gmail.com">Yalin Li</a>
 	&nbsp&nbsp
 	CV: <a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">April 2022</a>
 
