--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,12 @@
 	<hr style='border-top: 4px double; color: gray'>
 	<br>
 
-	Email: <a href="mailto:mailto.yalin.li@gmail.com">Yalin Li</a>
-	&nbsp&nbsp
-	CV: <a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">April 2022</a>
-
+	Email: 
+	<a href="mailto:yalinli2@illinois.edu">Professional</a>	&nbsp&nbsp
+	<a href="mailto:mailto.yalin.li@gmail.com">Personal</a> &nbsp&nbsp
+	<a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">
+		<i>Curriculum Vitae</i>
+	</a>
 	<br><br>
 
 	<!-- Google Scholar -->
