--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,16 @@
 	<hr style='border-top: 4px double; color: gray'>
 	<br>
 
+	<!-- CV -->
 	<a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">
 		<i>Curriculum Vitae</i>
 	</a>&nbsp
-	<br>
+	<br><br>
+
+	<!-- Email -->
 	Email: 
 	<a href="mailto:yalinli2@illinois.edu">Professional</a>;&nbsp
 	<a href="mailto:mailto.yalin.li@gmail.com">Personal</a>
-
 	<br><br>
 
 	<!-- Google Scholar -->
