try removing mixed http content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,11 +38,11 @@
 	<img src='https://yalinli2.github.io/webpage/images/logos/github.png', alt='GitHub',
 	style='float: center; width: 32px; vertical-align: middle'>
 	&nbsp
-	@<a href="http://github.com/yalinli2">yalinli2</a>
+	@<a href="https://github.com/yalinli2">yalinli2</a>
 	&nbsp
-	@<a href="http://github.com/QSD-Group">QSD-Group</a>
+	@<a href="https://github.com/QSD-Group">QSD-Group</a>
 	&nbsp
-	@<a href="http://github.com/BioSTEAMDevelopmentGroup">BioSTEAMDevelopmentGroup</a>
+	@<a href="https://github.com/BioSTEAMDevelopmentGroup">BioSTEAMDevelopmentGroup</a>
 
 	<br><br>
 
