--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,45 +4,45 @@
 	<br>
 
 	<!-- CV -->
-	<a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">
+	<a href='https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing'>
 		<i>Curriculum Vitae</i>
 	</a>&nbsp
 	<br><br>
 
 	<!-- Email -->
 	Email: 
-	<a href="mailto:yalinli2@illinois.edu">Professional</a>;&nbsp
-	<a href="mailto:mailto.yalin.li@gmail.com">Personal</a>
+	<a href='mailto:yalinli2@illinois.edu'>Professional</a>;&nbsp
+	<a href='mailto:mailto.yalin.li@gmail.com'>Personal</a>
 	<br><br>
 
 	<!-- Google Scholar -->
-	<img src='https://yalinli2.github.io/webpage/images/logos/google-scholar.png', alt='Google Scholar',
+	<img src='../images/logos/google-scholar.png', alt='Google Scholar',
 	style='float: center; width: 32px; vertical-align: middle'>
-	<a href="https://scholar.google.com/citations?user=5Zv3mM0AAAAJ&hl=en">Google Scholar</a>
+	<a href='https://scholar.google.com/citations?user=5Zv3mM0AAAAJ&hl=en'>Google Scholar</a>
 	&nbsp&nbsp
 
 	<!-- ORCiD -->
-	<link rel="stylesheet" href="https://yalinli2.github.io/webpage/css/academicons.min.css"/>
-	<i class="ai ai-orcid ai-2x", style='float: center; width: 32px; vertical-align: middle;'></i>
-	<a href="https://orcid.org/0000-0002-8863-4758">ORCiD</a>
+	<link rel='stylesheet' href='../css/academicons.min.css'/>
+	<i class='ai ai-orcid ai-2x', style='float: center; width: 32px; vertical-align: middle;'></i>
+	<a href='https://orcid.org/0000-0002-8863-4758'>ORCiD</a>
 	&nbsp&nbsp
 
 	<!-- LinkedIn -->
-	<img src='https://yalinli2.github.io/webpage/images/logos/linkedin.png', alt='LinkedIn',
+	<img src='../images/logos/linkedin.png', alt='LinkedIn',
 	style='float: center; width: 32px; vertical-align: middle'>
-	<a href="https://www.linkedin.com/in/yalin-li-a157017b/">LinkedIn</a>
+	<a href='https://www.linkedin.com/in/yalin-li-a157017b'>LinkedIn</a>
 
 	<br><br>
 
 	<!-- GitHub -->
-	<img src='https://yalinli2.github.io/webpage/images/logos/github.png', alt='GitHub',
+	<img src='../images/logos/github.png', alt='GitHub',
 	style='float: center; width: 32px; vertical-align: middle'>
 	&nbsp
-	@<a href="https://github.com/yalinli2">yalinli2</a>
+	@<a href='https://github.com/yalinli2'>yalinli2</a>
 	&nbsp
-	@<a href="https://github.com/QSD-Group">QSD-Group</a>
+	@<a href='https://github.com/QSD-Group'>QSD-Group</a>
 	&nbsp
-	@<a href="https://github.com/BioSTEAMDevelopmentGroup">BioSTEAMDevelopmentGroup</a>
+	@<a href='https://github.com/BioSTEAMDevelopmentGroup'>BioSTEAMDevelopmentGroup</a>
 
 	<br><br>
 
