--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 header {
-  background-image: url('https://yalinli2.github.io/webpage/images/bg_index.jpg');
+  background-image: url('../images/bg_index.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
