--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -5,7 +5,7 @@ layout: default
 <head>
 <style>
 header {
-  background-image: url('https://yalinli2.github.io/webpage/images/backgrounds/publications.jpg');
+  background-image: url('../images/backgrounds/publications.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
