add a CV link in the navigation bar, but not enabled

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,9 @@ Yalin Li
 				{% for page in site.pages %} {% if page.title %}
 				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
+				<!-- CV 
+				<li><a href="https://drive.google.com/file/d/1XxD9vS4LtoyfvWILSEbQZ6toQdKhBdt4/view?usp=sharing">CV</a></li>
+				-->
 			</ul>
 		</nav>
 	</div>
